Fix navbar expander color. Fix placement and spacing of navbar badges. Show theme and user menus on mobile.

--- a/assets/sass/components/_menu-notification.scss
+++ b/assets/sass/components/_menu-notification.scss
@@ -4,8 +4,8 @@
 	}
 	.badge {
 		position: absolute;
-		left: 27px;
-		top: 10px;
+		left: 28px;
+		top: 12px;
 		-webkit-animation: bounce 2s 5 ease-in alternate;
 		-moz-animation: bounce 2s 5 ease-in alternate;
 		-o-animation: bounce 2s 5 ease-in alternate;
